<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
        <item
            android:id="@+id/add_skill"
            android:title="@string/add_skill" />
        <item
            android:id="@+id/add_exp"
            android:title="@string/add_experience" />
        <item
            android:id="@+id/add_port"
            android:title="@string/add_portfolio" />
        <item
            android:id="@+id/nav_faq"
            android:title="Faq" />
        <item
            android:id="@+id/nav_help"
            android:title="Help" />
        <item
            android:id="@+id/nav_about_us"
            android:title="About US" />
        <item
            android:id="@+id/edit_profile"
            android:title="Edit Profile" />
        <item
            android:icon="@drawable/ic_logout"
            android:id="@+id/logout"
            android:title="Log Out" />



</menu>