<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            tools:context=".register.RegisterScreenActivity">

            <TextView
                android:id="@+id/tvApps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="26dp"
                android:text="@string/value"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="24dp" />

            <TextView
                android:id="@+id/tvSubtitleReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="64dp"
                android:text="@string/register"
                android:textColor="#000"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvApps"
                android:layout_marginLeft="24dp" />

            <EditText
                android:id="@+id/et_name_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/full_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textSize="14sp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSubtitleReg" />

            <EditText
                android:id="@+id/et_email_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textSize="14sp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_name_reg" />

            <EditText
                android:id="@+id/et_pass_reg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textSize="14sp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="@+id/et_no_reg"
                app:layout_constraintStart_toStartOf="@+id/et_no_reg"
                app:layout_constraintTop_toBottomOf="@+id/et_no_reg" />

            <EditText
                android:id="@+id/et_no_reg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/phone_number"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:textSize="14sp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="@+id/et_email_reg"
                app:layout_constraintStart_toStartOf="@+id/et_email_reg"
                app:layout_constraintTop_toBottomOf="@+id/et_email_reg" />


            <Button
                android:id="@+id/btnReg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:background="@drawable/btn_corner"
                android:text="@string/register"
                android:textColor="#FFF"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/et_pass_reg"
                app:layout_constraintStart_toStartOf="@+id/et_pass_reg"
                app:layout_constraintTop_toBottomOf="@+id/et_pass_reg" />

            <Button
                android:id="@+id/btnToLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="98dp"
                android:background="@drawable/border_btn"
                android:text="@string/sign_in"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/btnReg"
                app:layout_constraintStart_toStartOf="@+id/btnReg"
                app:layout_constraintTop_toBottomOf="@id/textView" />

            <View
                android:id="@+id/divide"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="90dp"
                android:layout_marginBottom="15dp"
                android:background="#BDBDBD"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="@+id/btnToLogin"
                app:layout_constraintStart_toStartOf="@+id/btnToLogin"
                app:layout_constraintTop_toBottomOf="@+id/checkBox" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/already_have_an_account"
                app:layout_constraintBottom_toTopOf="@+id/btnToLogin"
                app:layout_constraintEnd_toEndOf="@+id/btnToLogin"
                app:layout_constraintStart_toStartOf="@+id/btnToLogin"
                app:layout_constraintTop_toBottomOf="@+id/divide" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept_terms_and_condition"
                app:layout_constraintStart_toStartOf="@+id/btnReg"
                app:layout_constraintTop_toBottomOf="@+id/btnReg" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>